[package]
name = "game_integration"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.91", features=["derive"] }
specs-derive = "*"


[dependencies.amethyst]
git = "https://github.com/amethyst/amethyst"
features = ["nightly", "vulkan"]
